Add a bunch of things

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "backdoor.run"
+name = "backdoor"
 version = "0.1.0"
 description = ""
 authors = ["Amin Shah Gilani <amin@gilani.me>"]
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 flask = "^3.0.3"
+gunicorn = "^22.0.0"
 
 
 [build-system]
